# symbolator

./: .gitignore  Dockerfile  README.md  README.rst  __init__.py  default.nix  flake.nix  minilexer.py  pyproject.toml  python-packages.nix  setup.cfg  symbolator.py  verilog_parser.py  vhdl_parser.py
.github/workflows/: build.yml  docs.yml  release.yml
doc/: conf.py
docs/: conf.py  index.rst
docs/_static/: project.css
docs/_templates/: download.html
hdlparse/: __init__.py  minilexer.py  verilog_parser.py  vhdl_parser.py
hdlparse/doc/: conf.py  index.rst  make.bat
hdlparse/doc/_static/: project.css
hdlparse/doc/_templates/: projects.html
nucanvas/: nucanvas.py  shapes.py  svg_backend.py
nucanvas/color/: sinebow.py
symbolator/: __init__.py  __main__.py  symbolator.py
symbolator/doc/: index.rst
symbolator_sphinx/: LICENSE.Sphinx  symbolator_sphinx.py
