[metadata]
name = symbolator
author = Kevin Thibedeau
author_email = kevin.thibedeau@gmail.com
url = http://kevinpt.github.io/symbolator
download_url = http://kevinpt.github.io/symbolator
description = HDL symbol generator
long_description = file: README.rst
description_file = README.rst
version = attr: symbolator.__version__
license = MIT
keywords = HDL symbol
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Documentation
    Natural Language :: English
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages =
    nucanvas
    nucanvas/color
    symbolator_sphinx
py_modules = symbolator
install_requires =
    sphinx>=4.3,<5
    hdlparse @ git+https://github.com/kammoh/pyHDLParser.git
include_package_data = True

[options.entry_points]
console_scripts =
    symbolator = symbolator:main

[pycodestyle]
max_line_length = 120
ignore = E501
